snad uz je to vsechno popsany

--- a/semestralka/Makefile
+++ b/semestralka/Makefile
@@ -6,7 +6,6 @@ LDFLAGS = -lm
 # Directories
 SRC_DIR = src
 OBJ_DIR = obj
-BIN_DIR = bin
 
 # Source files and object files
 SRC_FILES = $(wildcard $(SRC_DIR)/*.c) $(wildcard $(SRC_DIR)/stack/*.c)
@@ -14,28 +13,47 @@ OBJ_FILES = $(patsubst $(SRC_DIR)/%.c, $(OBJ_DIR)/%.o, $(SRC_FILES))
 DEP_FILES = $(OBJ_FILES:.o=.d)
 
 # Output program
-PROGRAM = $(BIN_DIR)/program
+PROGRAM = program
 
-# Default target
+# Default target: build the program
 all: $(PROGRAM)
 
 # Rule to create the program
 $(PROGRAM): $(OBJ_FILES)
-	@mkdir -p $(BIN_DIR)
 	$(CC) $(OBJ_FILES) -o $@ $(LDFLAGS)
 	@echo "Built $(PROGRAM)"
 
-# Rule to compile source files to object files
+# Rule to compile source files into object files
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
-	@mkdir -p $(dir $@)
+	@mkdir -p $(dir $@)  # Create obj directories as needed
 	$(CC) $(CFLAGS) -MMD -c $< -o $@
 
-# Include dependency files
+# Include dependency files for incremental builds
 -include $(DEP_FILES)
 
-# Clean target
+# Clean target: remove object files and the program
 clean:
-	rm -rf $(OBJ_DIR) $(BIN_DIR)
+	rm -rf $(OBJ_DIR) $(PROGRAM)
+
+# Windows-specific clean and build settings (for MinGW)
+ifdef OS
+ifeq ($(OS),Windows_NT)
+	RM = del /Q
+	MKDIR = if not exist
+else
+	RM = rm -f
+	MKDIR = mkdir -p
+endif
+else
+	RM = rm -f
+	MKDIR = mkdir -p
+endif
+
+clean-win:
+	$(RM) $(OBJ_DIR)\* $(PROGRAM).exe
+
+all-win:
+	$(MAKE) CC=$(CC) PROGRAM=$(PROGRAM).exe
 
 # Phony targets
-.PHONY: all clean
+.PHONY: all clean clean-win all-win
