--- a/semestralka/Makefile.win
+++ b/semestralka/Makefile.win
@@ -6,7 +6,6 @@ LDFLAGS = -lm
 # Directories
 SRC_DIR = src
 OBJ_DIR = obj
-BIN_DIR = bin
 
 # Source files and object files
 SRC_FILES = $(wildcard $(SRC_DIR)/*.c) $(wildcard $(SRC_DIR)/stack/*.c)
@@ -14,21 +13,19 @@ OBJ_FILES = $(patsubst $(SRC_DIR)/%.c, $(OBJ_DIR)/%.o, $(SRC_FILES))
 DEP_FILES = $(OBJ_FILES:.o=.d)
 
 # Output program
-PROGRAM = $(BIN_DIR)/program.exe
+PROGRAM = program
 
 # Default target
 all: $(PROGRAM)
 
 # Rule to create the program
 $(PROGRAM): $(OBJ_FILES)
-	@if not exist $(BIN_DIR) mkdir $(BIN_DIR)
 	$(CC) $(OBJ_FILES) -o $@ $(LDFLAGS)
 	@echo "Built $(PROGRAM)"
 
 # Rule to compile source files to object files
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
-	@if not exist $(OBJ_DIR) mkdir $(OBJ_DIR)
-	@if not exist $(dir $@) mkdir $(dir $@)
+	@mkdir -p $(dir $@)
 	$(CC) $(CFLAGS) -MMD -c $< -o $@
 
 # Include dependency files
@@ -36,8 +33,27 @@ $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 
 # Clean target
 clean:
-	@if exist $(OBJ_DIR) rmdir /S /Q $(OBJ_DIR)
-	@if exist $(BIN_DIR) rmdir /S /Q $(BIN_DIR)
+	rm -rf $(OBJ_DIR) $(PROGRAM)
+
+# Windows-specific settings (using MinGW)
+ifdef OS
+ifeq ($(OS),Windows_NT)
+	RM = del /Q
+	MKDIR = if not exist
+else
+	RM = rm -f
+	MKDIR = mkdir -p
+endif
+else
+	RM = rm -f
+	MKDIR = mkdir -p
+endif
+
+clean-win:
+	$(RM) $(OBJ_DIR)\* $(PROGRAM).exe
+
+all-win:
+	$(MAKE) CC=$(CC) PROGRAM=$(PROGRAM).exe
 
 # Phony targets
-.PHONY: all clean
+.PHONY: all clean clean-win all-win
