--- a/semestralka/Makefile
+++ b/semestralka/Makefile
@@ -1,6 +1,6 @@
 # Compiler and flags
 CC = gcc
-CFLAGS = -Wall -Wextra -Werror -g
+CFLAGS = -Wall -Wextra -Werror -g -ansi
 LDFLAGS = -lm
 
 # Directories
